clusters/home-lab/longhorn/longhorn-patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  template:
    spec:
      containers:
        - name: longhorn-ui
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
  namespace: longhorn-system
spec:
  template:
    spec:
      containers:
        - name: longhorn-driver-deployer
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
