clusters/home-lab/longhorn/set-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: longhorn-upgrade
spec:
  template:
    spec:
      containers:
        - name: longhorn-ui
          resources:
            requests:
              memory: 100Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
